html rows added

--- a/index.html
+++ b/index.html
@@ -29,13 +29,107 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-     <table class = schedule>
-      <tr>
-        <td class = time>9AM</td>
-        <td class = schedule-info><input style="width:100%;" /></td> 
-        <td class = save-button><button><img class="save-image" src="./assets/save.png"></button></td>
-      </tr>
-     </table>
+      <table class = schedule>
+        <tr id="row-9">
+          <td class = time>9AM</td>
+          <td class = schedule-info>
+            <input id="input-id" style="width:100%;"/>
+          </td> 
+          <td class = save-button>
+            <button id="save-button-id">
+              <img class="save-image" src="./assets/save.png">
+            </button>
+          </td>
+        </tr>
+        <tr id="row-10">
+          <td class = time>10AM</td>
+          <td class = schedule-info>
+            <input id="input-id" style="width:100%;"/>
+          </td> 
+          <td class = save-button>
+            <button id="save-button-id">
+              <img class="save-image" src="./assets/save.png">
+            </button>
+          </td>
+        </tr>
+        <tr id="row-11">
+          <td class = time>11AM</td>
+          <td class = schedule-info>
+            <input id="input-id" style="width:100%;"/>
+          </td> 
+          <td class = save-button>
+            <button id="save-button-id">
+              <img class="save-image" src="./assets/save.png">
+            </button>
+          </td>
+        </tr>
+        <tr id="row-12">
+          <td class = time>12PM</td>
+          <td class = schedule-info>
+            <input id="input-id" style="width:100%;"/>
+          </td> 
+          <td class = save-button>
+            <button id="save-button-id">
+              <img class="save-image" src="./assets/save.png">
+            </button>
+          </td>
+        </tr>
+        <tr id="row-13">
+          <td class = time>1PM</td>
+          <td class = schedule-info>
+            <input id="input-id" style="width:100%;"/>
+          </td> 
+          <td class = save-button>
+            <button id="save-button-id">
+              <img class="save-image" src="./assets/save.png">
+            </button>
+          </td>
+        </tr>
+        <tr id="row-14">
+          <td class = time>2PM</td>
+          <td class = schedule-info>
+            <input id="input-id" style="width:100%;"/>
+          </td> 
+          <td class = save-button>
+            <button id="save-button-id">
+              <img class="save-image" src="./assets/save.png">
+            </button>
+          </td>
+        </tr>
+        <tr id="row-15">
+          <td class = time>3PM</td>
+          <td class = schedule-info>
+            <input id="input-id" style="width:100%;"/>
+          </td> 
+          <td class = save-button>
+            <button id="save-button-id">
+              <img class="save-image" src="./assets/save.png">
+            </button>
+          </td>
+        </tr>
+        <tr id="row-16">
+          <td class = time>4PM</td>
+          <td class = schedule-info>
+            <input id="input-id" style="width:100%;"/>
+          </td> 
+          <td class = save-button>
+            <button id="save-button-id">
+              <img class="save-image" src="./assets/save.png">
+            </button>
+          </td>
+        </tr>
+        <tr id="row-17">
+          <td class = time>5PM</td>
+          <td class = schedule-info>
+            <input id="input-id" style="width:100%;"/>
+          </td> 
+          <td class = save-button>
+            <button id="save-button-id">
+              <img class="save-image" src="./assets/save.png">
+            </button>
+          </td>
+        </tr>
+      </table>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
