--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <table class = schedule>
         <tr id="row-9">
           <td class = time>9AM</td>
-          <td class = schedule-info>
-            <input id="input-id" style="width:100%;"/>
+          <td id="input-background-9" class = schedule-info>
+            <input id="input-9" style="width:100%;"/>
           </td> 
           <td class = save-button>
             <button id="save-button-id">
@@ -43,8 +43,8 @@
         </tr>
         <tr id="row-10">
           <td class = time>10AM</td>
-          <td class = schedule-info>
-            <input id="input-id" style="width:100%;"/>
+          <td id="input-background-10" class = schedule-info>
+            <input id="input-10" style="width:100%;"/>
           </td> 
           <td class = save-button>
             <button id="save-button-id">
@@ -54,8 +54,8 @@
         </tr>
         <tr id="row-11">
           <td class = time>11AM</td>
-          <td class = schedule-info>
-            <input id="input-id" style="width:100%;"/>
+          <td id="input-background-11" class = schedule-info>
+            <input id="input-11" style="width:100%;"/>
           </td> 
           <td class = save-button>
             <button id="save-button-id">
@@ -65,8 +65,8 @@
         </tr>
         <tr id="row-12">
           <td class = time>12PM</td>
-          <td class = schedule-info>
-            <input id="input-id" style="width:100%;"/>
+          <td id="input-background-12" class = schedule-info>
+            <input id="input-12" style="width:100%;"/>
           </td> 
           <td class = save-button>
             <button id="save-button-id">
@@ -76,8 +76,8 @@
         </tr>
         <tr id="row-13">
           <td class = time>1PM</td>
-          <td class = schedule-info>
-            <input id="input-id" style="width:100%;"/>
+          <td id="input-background-13" class = schedule-info>
+            <input id="input-13" style="width:100%;"/>
           </td> 
           <td class = save-button>
             <button id="save-button-id">
@@ -87,8 +87,8 @@
         </tr>
         <tr id="row-14">
           <td class = time>2PM</td>
-          <td class = schedule-info>
-            <input id="input-id" style="width:100%;"/>
+          <td id="input-background-14" class = schedule-info>
+            <input id="input-14" style="width:100%;"/>
           </td> 
           <td class = save-button>
             <button id="save-button-id">
@@ -98,8 +98,8 @@
         </tr>
         <tr id="row-15">
           <td class = time>3PM</td>
-          <td class = schedule-info>
-            <input id="input-id" style="width:100%;"/>
+          <td id="input-background-15" class = schedule-info>
+            <input id="input-15" style="width:100%;"/>
           </td> 
           <td class = save-button>
             <button id="save-button-id">
@@ -109,8 +109,8 @@
         </tr>
         <tr id="row-16">
           <td class = time>4PM</td>
-          <td class = schedule-info>
-            <input id="input-id" style="width:100%;"/>
+          <td id="input-background-16" class = schedule-info>
+            <input id="input-16" style="width:100%;"/>
           </td> 
           <td class = save-button>
             <button id="save-button-id">
@@ -120,8 +120,8 @@
         </tr>
         <tr id="row-17">
           <td class = time>5PM</td>
-          <td class = schedule-info>
-            <input id="input-id" style="width:100%;"/>
+          <td id="input-background-17" class = schedule-info>
+            <input id="input-17" style="width:100%;"/>
           </td> 
           <td class = save-button>
             <button id="save-button-id">
@@ -134,5 +134,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src=".\assets\js\script.js"></script>
   </body>
 </html>
