--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <input id="input-9" style="width:100%;"/>
           </td> 
           <td class = save-button>
-            <button id="save-button-id">
+            <button id="save-button-9">
               <img class="save-image" src="./assets/save.png">
             </button>
           </td>
@@ -47,7 +47,7 @@
             <input id="input-10" style="width:100%;"/>
           </td> 
           <td class = save-button>
-            <button id="save-button-id">
+            <button id="save-button-10">
               <img class="save-image" src="./assets/save.png">
             </button>
           </td>
@@ -58,7 +58,7 @@
             <input id="input-11" style="width:100%;"/>
           </td> 
           <td class = save-button>
-            <button id="save-button-id">
+            <button id="save-button-11">
               <img class="save-image" src="./assets/save.png">
             </button>
           </td>
@@ -69,7 +69,7 @@
             <input id="input-12" style="width:100%;"/>
           </td> 
           <td class = save-button>
-            <button id="save-button-id">
+            <button id="save-button-12">
               <img class="save-image" src="./assets/save.png">
             </button>
           </td>
@@ -80,7 +80,7 @@
             <input id="input-13" style="width:100%;"/>
           </td> 
           <td class = save-button>
-            <button id="save-button-id">
+            <button id="save-button-13">
               <img class="save-image" src="./assets/save.png">
             </button>
           </td>
@@ -91,7 +91,7 @@
             <input id="input-14" style="width:100%;"/>
           </td> 
           <td class = save-button>
-            <button id="save-button-id">
+            <button id="save-button-14">
               <img class="save-image" src="./assets/save.png">
             </button>
           </td>
@@ -102,7 +102,7 @@
             <input id="input-15" style="width:100%;"/>
           </td> 
           <td class = save-button>
-            <button id="save-button-id">
+            <button id="save-button-15">
               <img class="save-image" src="./assets/save.png">
             </button>
           </td>
@@ -113,7 +113,7 @@
             <input id="input-16" style="width:100%;"/>
           </td> 
           <td class = save-button>
-            <button id="save-button-id">
+            <button id="save-button-16">
               <img class="save-image" src="./assets/save.png">
             </button>
           </td>
@@ -124,7 +124,7 @@
             <input id="input-17" style="width:100%;"/>
           </td> 
           <td class = save-button>
-            <button id="save-button-id">
+            <button id="save-button-17">
               <img class="save-image" src="./assets/save.png">
             </button>
           </td>
